# meowHttp

./: CMakeLists.txt  Config.cmake.in  LICENSE  README.md  main.cpp  meow  nya
src/: client.cpp  https.cpp  main.cpp  websocket.cpp
src/includes/: client.h  enum.h  https.h  websocket.h
test/: CMakeLists.txt  httpsGet.cpp  httpsPost.cpp  wsBinary.cpp  wsPing.cpp  wsText.cpp
