cmake_minimum_required(VERSION 3.25.1)
project(meowHttp)
find_package(OpenSSL REQUIRED)
set(CMAKE_CXX_STANDARD 23)
enable_testing()
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
option(BUILD_TESTS "Build tests" OFF)
if(BUILD_TESTS)
  add_subdirectory(${PROJECT_SOURCE_DIR}/test)
endif()
file(GLOB_RECURSE http-client_src "src/*.cpp")
set(CMAKE_CXX_FLAGS_DEBUG "-g -Wall -Wextra")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -Wextra")
add_library(meowHttp ${http-client_src})

if(CMAKE_SYSTEM_NAME STREQUAL "SunOS")
  target_link_libraries(meowHttp PRIVATE OpenSSL::SSL OpenSSL::Crypto socket)
elseif(WIN32)
  target_link_libraries(meowHttp PRIVATE OpenSSL::SSL OpenSSL::Crypto wsock32 ws2_32)
else()
  target_link_libraries(meowHttp PRIVATE OpenSSL::SSL OpenSSL::Crypto)
endif()
install(TARGETS meowHttp DESTINATION lib)
install(DIRECTORY ${PROJECT_SOURCE_DIR}/src/includes// DESTINATION include/meowHttp)
